# lib/db/src/schema/index.ts
@@ -1,1 +1,3 @@
 export * from "./products";
+export * from "./categories";
+export * from "./settings";
